[gd_scene load_steps=6 format=3 uid="uid://b32pjn02ks4oc"]

[ext_resource type="Script" path="res://ui/root/save_load_dialogs/save_load_manager.gd" id="1_l5m65"]
[ext_resource type="PackedScene" uid="uid://dshk2tsjj4esn" path="res://ui/root/save_load_dialogs/confirm_dialog.tscn" id="2_k6vhn"]
[ext_resource type="PackedScene" uid="uid://dx7hu34l8e5vh" path="res://ui/root/save_load_dialogs/save_load_dialog.tscn" id="3_khfo4"]
[ext_resource type="Theme" uid="uid://ckiydn4300lug" path="res://ui/themes/default.tres" id="4_41m5b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_77edb"]
bg_color = Color(0, 0, 0, 0.27451)

[node name="SaveLoadManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_l5m65")

[node name="BlackOverlay" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_77edb")

[node name="ConfirmDialog" parent="." instance=ExtResource("2_k6vhn")]
size = Vector2i(328, 117)
transient = false

[node name="SaveLoadDialog" parent="." instance=ExtResource("3_khfo4")]
disable_3d = true
transparent_bg = true
size = Vector2i(672, 450)
transparent = true
theme = ExtResource("4_41m5b")
ok_button_text = "Open"
mode_overrides_title = false
